<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all">Todos</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_absents">Ausentes</string>
    <string name="label_guests">Nome do Convidado</string>
    <string name="edit_hint_guest">Nome do Convidado</string>
    <string name="label_confirmation">Confirmação</string>
    <string name="radio_present">Presente</string>
    <string name="radio_absent">Ausente</string>
    <string name="button_add_guest">Cadastrar</string>
    <string name="toast_success">Confirmado com Sucesso</string>
    <string name="toast_fail">Falha ao Cadastrar</string>
</resources>