<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.GuestFormActivity">

    <EditText
        android:id="@+id/edit_guest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_hint_guest"
        android:inputType="text"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@id/text_confirmation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_confirmation"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_guest" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_guest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_confirmation">

        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_present" />

        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_absent" />

    </RadioGroup>

    <Button
        android:id="@+id/button_add_guest"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_add_guest"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />


</androidx.constraintlayout.widget.ConstraintLayout>